--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.androidfinalprojectvillamil.MainActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame" >
+    
+    <Button android:id="@+id/startB"
+         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+      	android:text="@string/start"/>
+    <TextView android:id="@+id/showDistance"
+        android:layout_width="200dp"
+        android:layout_height="100dp" />
+    <Button android:id="@+id/stopB" 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/stop" />
+</LinearLayout>
