--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,56 +1,63 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context="com.example.androidfinalprojectvillamil.MainActivity"
     tools:ignore="MergeRootFrame" >
-    
-    <TextView android:layout_width="wrap_content"
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center_horizontal"
         android:text="@string/enter_score"
         android:textColor="#008000"
         android:textSize="35sp"
         android:textStyle="bold" />
-    
-    <Spinner android:id="@+id/clubs_sppiner"
-	    android:layout_width="150dp"
-	    android:layout_height="wrap_content"
-	    android:layout_marginBottom="10dp" />
-	    
-    <Button android:id="@+id/startB"
+
+    <Spinner
+        android:id="@+id/clubs_sppiner"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp" />
+
+    <Button
+        android:id="@+id/startB"
         style="@style/button"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-      	android:text="@string/start"/>
-    
-    <TextView android:id="@+id/showDistance"
+        android:text="@string/start" />
+
+    <TextView
+        android:id="@+id/showDistance"
         style="@style/button"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
         android:text="@string/zero" />
-    
-    <Button android:id="@+id/stopB" 
+
+    <Button
+        android:id="@+id/stopB"
         style="@style/button"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:text="@string/stop" />
-    
-    <Button android:id="@+id/submit"
+
+    <Button
+        android:id="@+id/submit"
         style="@style/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="30dp"
         android:text="@string/submit" />
+
 </LinearLayout>
