--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -20,6 +20,26 @@
     <style name="button" >
         <item name="android:background">@drawable/green_rectangle</item>
         <item name="android:padding">5dp</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/white</item>
     </style>
+    
+    <style name="header2" >
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginRight">40dp</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/green_rectangle</item>
+    </style>
+    
+    <style name="lists" >
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/lightGreen</item>
+        <item name="android:layout_marginRight">20dp</item>
+    </style>
+    
 </resources>
