--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -24,7 +24,7 @@
     </style>
     
     <style name="header2" >
-        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">20dp</item>
         <item name="android:layout_marginTop">20dp</item>
@@ -33,11 +33,13 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@drawable/green_rectangle</item>
+        <item name="android:gravity">center_horizontal</item>
+        
     </style>
     
     <style name="lists" >
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">100dp</item>
         <item name="android:background">@color/lightGreen</item>
         <item name="android:layout_marginRight">20dp</item>
     </style>
