--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -24,13 +24,12 @@
     </style>
     
     <style name="header2" >
-        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">20dp</item>
-        <item name="android:layout_marginTop">20dp</item>
-        <item name="android:layout_marginRight">40dp</item>
-        <item name="android:textSize">24dp</item>
+        <item name="android:layout_margin">30dp</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:padding">10dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@drawable/green_rectangle</item>
         <item name="android:gravity">center_horizontal</item>
@@ -39,9 +38,11 @@
     
     <style name="lists" >
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">100dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@color/lightGreen</item>
-        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginRight">30dp</item>
+        <item name="android:layout_marginBottom">30dp</item>
     </style>
     
 </resources>
